--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
             <p>
               See below for example snippets and to see a live demo of the
-              each of the third-party authentication flows.
+              each of the third-party authentication flows bla bla bla
             </p>
           </div>
         </fieldset>
