--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <legend class="bold">Overview</legend>
           <div class="content">
             <p>
-              Firebase Simple Login is a built-in service allowing you to
+              Firebase Simple Login is a built-in service allowing you to dead
               authenticate users in your application using only client-side
               code. It is the simplest way to get up and running with security
               in your Firebase-powered application.
